--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,2 +1,13 @@
+@import "variables/colors.scss";
+@import "variables/fonts.scss";
+@import "variables/typography.scss";
+
 @import "custom/index";
+
+
+@import "components/MainContainer.scss";
+
 @import "components/NavBar.scss";
+@import "components/Footer.scss";
+
+
