--- a/src/sass/components/Footer.scss
+++ b/src/sass/components/Footer.scss
@@ -1,7 +1,5 @@
 .footerContainer {
-    width: 100%;
     background-color: $primaryColor;
-    position: absolute;
     bottom: 0;
     text-align: center;
     padding: 2rem;
@@ -15,6 +13,7 @@
         font-weight: bold;
         text-transform: uppercase;
         transition: $transitionHover;
+        font-size: 15px;
 
         &:hover {
             color: $secondaryColor;
