--- a/src/sass/components/MainContainer.scss
+++ b/src/sass/components/MainContainer.scss
@@ -1,7 +1,7 @@
 .mainContainer {
     background-color: #c5c5c56e;
-    width: 1000px;
-    max-width: 100%;
+    max-width: 1000px;
+    width: 100%;
     margin: 8rem auto 2rem auto;
     padding: 2rem;
     text-align: center;
@@ -11,6 +11,7 @@
     @media screen and (max-width: 1000px) {
         border-radius: 0;
         transition: $transitionHover;
+        width: auto;
     }
 
 }
