--- a/src/sass/components/NavBar.scss
+++ b/src/sass/components/NavBar.scss
@@ -71,11 +71,17 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                border-top: 1px solid white;
+                transition: $transitionHover;
+                width: 100%;
                 padding-top: 1rem;
                 margin-top: 1rem;
-                border-top: 1px solid white;
-                width: 100%;
-                // display: none;
+                // height: 100vh;
+                position: absolute;
+                right: -20rem;
+                background-color: $primaryColor;
+                opacity: 0;
+                z-index: -1;
 
                 .navLink {
                     margin: 10px;
@@ -253,4 +259,20 @@
             }
         }
     }
+}
+
+.showMenu {
+    transition: $transitionHover;
+
+    right: 0 !important;
+    position: relative !important;
+    opacity: 1 !important;
+    z-index: 2 !important;
+    height: 100vh;
+
+
+}
+
+.toggleIcon {
+    transition: $transitionHover;
 }
