--- a/src/components/Productcard/productsLayout.scss
+++ b/src/components/Productcard/productsLayout.scss
@@ -1,15 +1,353 @@
-.productsGrid{
+.productsGrid {
     display: grid;
-    grid-template-columns:repeat(auto-fill, 230px) ;
-    gap:40px;
+    grid-template-columns: repeat(auto-fill, 275px);
+    gap: 40px;
     padding: 40px;
     justify-content: center;
-    @media (max-width:560px){
-        grid-template-columns:100%;
+
+    @media (max-width:560px) {
+        grid-template-columns: 100%;
     }
 }
 
 
-.productCard{
-    background-color: green;
+.productCard {
+    background-color: darken($secondaryColor, 20%);
+    padding: 10px;
+    border-radius: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    transition: $transitionHover;
+    bottom: 0;
+
+    &::after {
+        content: "";
+        background-color: transparent;
+        width: 0%;
+        height: 0%;
+        position: absolute;
+        border-radius: 10px;
+        top: -5px;
+        left: -5px;
+        z-index: -1;
+        transition: $transitionHover;
+    }
+
+    &:hover {
+
+
+        &::after {
+            content: "";
+            background-color: $secondaryColor;
+            transition: $transitionHover;
+            width: 104%;
+            height: 103%;
+            position: absolute;
+            border-radius: 10px;
+            top: -5px;
+            left: -5px;
+            z-index: -1;
+        }
+
+        transition: $transitionHover;
+        bottom: 10px;
+    }
+
+    .productPicture {
+        width: 100%;
+        height: 15rem;
+        object-fit: cover;
+        display: inline-block;
+        background-size: contain;
+        border-radius: 5px;
+        transition: $transitionHover;
+    }
+
+    .productInfo {
+        width: 100%;
+    }
+
+    h3 {
+        font-size: 18px;
+        text-transform: uppercase;
+        font-family: $mainFont;
+        color: $white;
+        margin: 10px 0;
+    }
+
+    p {
+        color: $white;
+        font-size: 15px;
+        font-family: $mainFont;
+        font-weight: 400;
+    }
+
+    .productstock {
+        font-weight: 800;
+        text-transform: uppercase;
+        color: $alertColor;
+    }
+
+
+
+    .productSecondaryData {
+        margin: 10px 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+
+        @media screen and (max-width: 425px) {
+            flex-wrap: wrap;
+            justify-content: center;
+
+            .productPrice {
+                margin-right: 10px;
+            }
+        }
+
+        .productPrice,
+        .productUnits {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+            p {
+                text-decoration: underline;
+                font-weight: 600;
+                margin-right: 5px;
+                color: $white;
+            }
+
+            span {
+                font-style: italic;
+                color: $white;
+            }
+        }
+    }
+}
+
+
+.buySection {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    height: 2rem;
+    margin: 20px 0;
+
+    @media screen and (max-width: 425px) {
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: auto;
+        max-width: 10rem;
+        width: 100%;
+        margin: auto;
+    }
+
+    .quantityBox {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+
+        @media screen and (max-width: 425px) {
+            width: 100%;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .quantityValue {
+            background-color: $white;
+            width: 4rem;
+            margin-right: 5px;
+            border: 2px solid $secondaryColor;
+            text-align: center;
+            height: 100%;
+            color: $black;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            font-weight: 500;
+        }
+
+        .auntityControls {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            margin: 0 2px;
+            height: 100%;
+
+            &:first-child {
+                span {
+                    background-color: red !important;
+                }
+            }
+
+            span {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                background-color: $secondaryColor;
+                width: 1rem;
+                color: $white;
+                font-weight: 600;
+                font-size: 18px;
+                border: 1px solid $white;
+                font-family: $mainFont;
+                transition: $transitionHover;
+                padding: 0 5px;
+                height: 100%;
+
+                &:first-child {
+                    margin-right: 3px;
+                }
+
+
+                &:hover {
+                    cursor: pointer;
+                    transition: $transitionHover;
+                    background-color: darken($secondaryColor, 10%);
+                }
+
+                &:active {
+                    background-color: $white;
+                    color: $secondaryColor;
+                }
+
+            }
+        }
+    }
+
+    button {
+        background-color: $secondaryColor;
+        margin: 0 1px;
+        text-transform: uppercase;
+        color: $white;
+        font-weight: 600;
+        font-family: $mainFont;
+        font-size: 14px;
+        border: 1px solid $white;
+        padding: 5px;
+        transition: $transitionHover;
+        height: 100%;
+
+        @media screen and (max-width: 425px) {
+            width: 100%;
+            margin-top: 10px;
+        }
+
+
+        &:hover {
+            transition: $transitionHover;
+            cursor: pointer;
+            background-color: darken($secondaryColor, 10%);
+        }
+
+        &:active {
+            background-color: $white;
+            color: $secondaryColor;
+        }
+
+    }
+}
+
+// NA PRODUCT===================
+.grayPicture {
+    .productPicture {
+        filter: blur(2px) grayscale(1);
+    }
+
+    bottom: 0;
+    background-color: rgb(80, 80, 80);
+    position: relative;
+    transition: $transitionHover;
+    justify-content: flex-start;
+
+    &::before {
+        content: "NOT AVAILABLE";
+        color: $alertColor;
+        font-family: $mainFont;
+        font-weight: 700;
+        text-transform: uppercase;
+        position: absolute;
+        z-index: 9;
+        top: 35%;
+        transform: rotate(-34deg);
+        font-size: 25px;
+        transition: $transitionHover;
+        opacity: 0;
+    }
+
+    &::after {
+        content: "";
+        background-color: transparent;
+        width: 0%;
+        height: 0%;
+        position: absolute;
+        border-radius: 10px;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        transition: $transitionHover;
+    }
+
+    &:hover {
+
+
+        &::after {
+            content: "";
+            background-color: transparent;
+            transition: $transitionHover;
+            width: 104%;
+            height: 103%;
+            position: absolute;
+            border-radius: 10px;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        transition: $transitionHover;
+        bottom: 0;
+
+        &::before {
+            opacity: 1;
+        }
+    }
+}
+
+.lastUnitMessage {
+    font-weight: 500;
+    color: $alertColor;
+    font-family: $mainFont;
+    position: absolute;
+    bottom: 1rem;
+    bottom: 4px;
+
+    @media (max-width:440px) {
+        bottom: auto;
+        top: 8rem;
+        background-color: $alertColor;
+        color: $white;
+        width: 80%;
+        border-radius: 10px;
+    }
+}
+
+.hideStock {
+    display: none !important;
+}
+
+.availableStockButtons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
