--- a/src/components/Container/MainContainer.scss
+++ b/src/components/Container/MainContainer.scss
@@ -2,7 +2,7 @@
     background-color: #c5c5c56e;
     max-width: 1400px;
     width: 100%;
-    margin: 8rem auto 2rem auto;
+    margin: 8rem auto 8rem auto;
     padding: 2rem;
     text-align: center;
     border-radius: 20px;
@@ -14,6 +14,7 @@
         width: 100%;
         max-width: 100%;
         padding: 2rem 0;
+        margin: 2rem auto;
     }
 
 }
